[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mss"
version = "0.0.1"
authors = [
    { name = "Melisa Sahin", email = "ssahinmelisa45@gmail.com" },
]
description = "A simple package for me."
readme = "README.md"
keywords = ["package", "python"]
requires-python = ">=3.6.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sahinmelisa/mss"
